--- a/index.html
+++ b/index.html
@@ -140,7 +140,7 @@
             <div class="work">
                 <img src="images/work-5.png">
                 <div class="layer">
-                    <h3>Myantra Clone Website</h3>
+                    <h3>Myntra Clone Website</h3>
                     <p>Lorem, ipsum dolor sit amet consectetur adipisicing elit. Repellendus dolores vero, animi odio excepturi molestias harum voluptates nesciunt iusto ipsum enim mollitia voluptate fugit minus fuga pariatur dignissimos quidem quae!</p>
                     <a href="#"><i class="fa-solid fa-arrow-up-right-from-square"></i></a>
                 </div>
