--- a/index.html
+++ b/index.html
@@ -78,19 +78,19 @@
                 <i class="fa-solid fa-code"></i>
                 <h2>Web Design</h2>
                 <p>I love to innovate and design websites that are both beautiful and functional. My websites are designed to attract, interact and impress your visitors and turn them into loyal customers.</p>
-                <a href="#">Learn more</a>
+                <a href="#portfolio">Learn more</a>
             </div>
             <div>
                 <i class="fa-solid fa-crop"></i>
                 <h2>UI/UX</h2>
                 <p>I excel at creating UI/UX designs that enhance user experiences. I pay attention to every detail and design interfaces that are not only stunning but also easy to use and explore.</p>
-                <a href="#">Learn more</a>
+                <a href="#portfolio">Learn more</a>
             </div>
             <div>
                 <i class="fa-brands fa-app-store"></i>
                 <h2>Web/App Design</h2>
                 <p>I combine creativity and functionality to design web apps that are outstanding in quality. I focus on creating web app interfaces that not only display original designs but also ensure a satisfying and enjoyable user experience.</p>
-                <a href="#">Learn more</a>
+                <a href="#portfolio">Learn more</a>
             </div>
         </div>
     </div>
@@ -107,7 +107,7 @@
                 <div class="layer">
                     <h3>To-Do List</h3>
                     <p>Meet my carefully designed todo list app: Your best solution for keeping order and getting things done. Easily handle tasks, assign importance, and monitor your achievements with an intuitive interface that makes your day easier. Boost your productivity with this app that blends user-friendly functionality with a stylish, contemporary design.</p>
-                    <a href="#"><i class="fa-solid fa-arrow-up-right-from-square"></i></a>
+                    <a href="https://abhishek9520.github.io/to-dolist.github.io/"><i class="fa-solid fa-arrow-up-right-from-square"></i></a>
                 </div>
             </div>
             <div class="work">
@@ -140,7 +140,7 @@
             <div class="work">
                 <img src="images/work-5.png">
                 <div class="layer">
-                    <h3>Myntra Clone Website</h3>
+                    <h3>Myantra Clone Website</h3>
                     <p>Lorem, ipsum dolor sit amet consectetur adipisicing elit. Repellendus dolores vero, animi odio excepturi molestias harum voluptates nesciunt iusto ipsum enim mollitia voluptate fugit minus fuga pariatur dignissimos quidem quae!</p>
                     <a href="#"><i class="fa-solid fa-arrow-up-right-from-square"></i></a>
                 </div>
@@ -175,13 +175,12 @@
         <div class="row">
             <div class="contact-left">
                 <h1 class="sub-title">Contact Me</h1>
-                <p><i class="fa-solid fa-share"></i> contact@example.com</p>
-                <p><i class="fa-solid fa-phone"></i> 0123456789</p>
+                <p><i class="fa-solid fa-share"></i> abhishek07236@gmail.com</p>
+                <p><i class="fa-solid fa-phone"></i> +919520573318</p>
                 <div class="social-icons">
-                    <a href=""><i class="fa-brands fa-facebook"></i></a>
-                    <a href=""><i class="fa-brands fa-twitter"></i></a>
-                    <a href=""><i class="fa-brands fa-linkedin"></i></a>
-                    <a href=""><i class="fa-brands fa-instagram"></i></a>
+                    <a href="https://drive.google.com/file/d/1JBqPYJe8j3ceYvtmlpS2ZPwkuCDoEZMJ/view?usp=drive_link"><i class="fa-brands fa-whatsapp"></i></a>
+                    <a href="https://twitter.com/abhishek07236?t=YaBwBPU1k6TaYqLj8pxXAw&s=09"><i class="fa-brands fa-twitter"></i></a>
+                    <a href="https://www.linkedin.com/in/abhishek-pal-86b291230/"><i class="fa-brands fa-linkedin"></i></a>
                 </div>
                 <a href="images/my-cv.pdf" download class="btn btn2">Download CV</a>
             </div>
