--- a/index.html
+++ b/index.html
@@ -61,8 +61,8 @@
                 <div class="tab-contents" id="education">
                     <ul>
                         <li><span>2025-Ongoing</span><br>B.Tech from MIT, Meerut</li>
-                        <li><span>2020-21</span><br>Intermediate from CBSE with (84.%)</li>
-                        <li><span>2018-19</span><br>HighSchool from CBSE with (85%) </li>
+                        <li><span>2020-21</span><br>Intermediate from CBSE with (85.6%)</li>
+                        <li><span>2018-19</span><br>HighSchool from CBSE with (84.6%) </li>
                     </ul>
                 </div>
             </div>
