--- a/index.html
+++ b/index.html
@@ -122,7 +122,7 @@
                 <div class="layer">
                     <h3>Calculator</h3>
                     <p>Lorem, ipsum dolor sit amet consectetur adipisicing elit. Repellendus dolores vero, animi odio excepturi molestias harum voluptates nesciunt iusto ipsum enim mollitia voluptate fugit minus fuga pariatur dignissimos quidem quae!</p>
-                    <a href="#"><i class="fa-solid fa-arrow-up-right-from-square"></i></a>
+                    <a href="https://abhishek9520.github.io/calculator.github.io/"><i class="fa-solid fa-arrow-up-right-from-square"></i></a>
                 </div>
             </div>
             
