--- a/index.html
+++ b/index.html
@@ -55,6 +55,7 @@
                     <ul>
                         <li><span>2023-Current</span><br>Web Developer at CodeSoft</li>
                         <li><span>2023-Current</span><br>Web Developer at Bharat Intern</li>
+                        <li><span>2023-Current</span><br>Web Developer</li>
                     </ul>
                 </div>
                 <div class="tab-contents" id="education">
@@ -106,7 +107,7 @@
                 <div class="layer">
                     <h3>To-Do List</h3>
                     <p>Meet my carefully designed todo list app: Your best solution for keeping order and getting things done. Easily handle tasks, assign importance, and monitor your achievements with an intuitive interface that makes your day easier. Boost your productivity with this app that blends user-friendly functionality with a stylish, contemporary design.</p>
-                    <a href="https://abhishek9520.github.io/to-dolist.github.io/"><i class="fa-solid fa-arrow-up-right-from-square"></i></a>
+                    <a href="https://abhishek9520.github.io/CODSOFT-Task-2/"><i class="fa-solid fa-arrow-up-right-from-square"></i></a>
                 </div>
             </div>
             <div class="work">
@@ -122,7 +123,7 @@
                 <div class="layer">
                     <h3>Calculator</h3>
                     <p>Lorem, ipsum dolor sit amet consectetur adipisicing elit. Repellendus dolores vero, animi odio excepturi molestias harum voluptates nesciunt iusto ipsum enim mollitia voluptate fugit minus fuga pariatur dignissimos quidem quae!</p>
-                    <a href="https://abhishek9520.github.io/calculator.github.io/"><i class="fa-solid fa-arrow-up-right-from-square"></i></a>
+                    <a href="https://abhishek9520.github.io/CODSOFT-Task-3/"><i class="fa-solid fa-arrow-up-right-from-square"></i></a>
                 </div>
             </div>
             
